--- a/gyftapp/projects/customer/src/app/shared/sidebar/sidebar.scss
+++ b/gyftapp/projects/customer/src/app/shared/sidebar/sidebar.scss
@@ -1,6 +1,10 @@
 /* Fixed sidenav, full height */
-@import url("https://use.fontawesome.com/releases/v5.6.1/css/all.css");
 
+@import url("https://use.fontawesome.com/releases/v5.6.1/css/all.css");
+$backgorundcolor:#673ab7;
+$textcolor:#ede7f6;
+$hovercolor:#7c4dff;
+$sidenacpolor:#9575cd;
 .ressidebar {
     width: 50%;
 }
@@ -13,32 +17,58 @@
     display: none;
 }
 
-.bgclr {
-    background-color: steelblue;
-}
 
 /*layout*/
-.logo{ display: flex; background: #de4b4c;align-items: center;   padding: 18px 15px;}
-.txt-grey{color: #c2c5ca;}
-.app-download img{width: 60px;}
-.app-download{font-size: 18px !important; border: 0 !important;}
-.sec-nav{    border-top: 2px solid #202832; padding: 0px 21px;}
-.txt-white{color:#fff;}
+
+.logo {
+    display: flex;
+    background: $backgorundcolor;
+    align-items: center;
+    padding: 18px 15px;
+}
+
+.txt-grey {
+    color: #c2c5ca;
+}
+
+.app-download img {
+    width: 60px;
+}
+
+.app-download {
+    font-size: 18px !important;
+    border: 0 !important;
+}
+
+.sec-nav {
+    border-top: 2px solid #202832;
+    padding: 0px 21px;
+}
+
+.txt-white {
+    color: #fff;
+}
 
 .pull-right {
-float: right !important;
+    float: right !important;
 }
+
 .pull-left {
-float: left !important;
+    float: left !important;
 }
-.highlightlower{
-font-size: small;
+
+.highlightlower {
+    font-size: small;
 }
+
+
 /* Optional: Style the caret down icon */
 
 .fa-caret-down {
-padding-left: 8px;
+    padding-left: 8px;
 }
+
+
 /* Small devices (portrait tablets and large phones, 600px and up) */
 
 @media only screen and (min-width: 600px) {
@@ -63,17 +93,22 @@ padding-left: 8px;
     background-color: #354050;
     overflow-x: hidden;
     transition: 0.5s;
-
-}
-.sidenav > a.profile-set{ padding: 25px 9px 25px 20px; display: flex;align-items: center;}
-.sidenav > a.profile-set span{
-  font-size: 32px;
-  color:#fff;
-  font-weight: bold;
-  margin-left: 15px;
 }
 
-.sidenav > a {
+.sidenav>a.profile-set {
+    padding: 25px 9px 25px 20px;
+    display: flex;
+    align-items: center;
+}
+
+.sidenav>a.profile-set span {
+    font-size: 32px;
+    color: #fff;
+    font-weight: bold;
+    margin-left: 15px;
+}
+
+.sidenav>a {
     padding: 20px 8px 20px 20px;
     text-decoration: none;
     font-size: 22px;
@@ -81,7 +116,7 @@ padding-left: 8px;
     display: block;
     transition: 0.3s;
     border-bottom: 2px solid #202832;
-        width: 295px;
+    width: 295px;
 }
 
 .sidenav a:hover {
@@ -89,11 +124,12 @@ padding-left: 8px;
 }
 
 .sidenav .closebtn {
-  position: absolute;
-      right: 5px;
-      font-size: 36px;
-      float: right;
-      color: #fff;    padding: 5px;
+    position: absolute;
+    right: 5px;
+    font-size: 36px;
+    float: right;
+    color: #fff;
+    padding: 5px;
 }
 
 @media screen and (max-height: 450px) {
@@ -115,7 +151,6 @@ padding-left: 8px;
 }
 
 
-
 /* Some media queries for responsiveness */
 
 @media screen and (max-height: 450px) {
@@ -134,7 +169,7 @@ padding-left: 8px;
 
 .navbar {
     overflow: hidden;
-   width: 100%;
+    width: 100%;
     /* background-color: #333; */
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -171,7 +206,7 @@ padding-left: 8px;
 
 .navbar a:hover,
 .dropdown:hover .dropbtn {
-    background-color: red;
+    background-color: $hovercolor;
 }
 
 .dropdown-content {
